--- a/index.html
+++ b/index.html
@@ -9,21 +9,50 @@
 <body>
   
   <header class="header">
+
     <div class="header__navbar">
       <div class="nav-container flex">
+
         <span class="header__logo">Web.Dev</span>
+
         <nav class="header__nav">
           <a href="#">Home</a>
           <a href="#">About</a>
           <a href="#">Testimonials</a>
           <a href="#">Contact</a>
         </nav>
+
         <div class="header__buttons">
           <button class="btn btn-short btn-light">Sign in</button>
-          <button class="btn">Sign up</button>
+          <button class="btn btn-shadow">Sign up</button>
         </div>
+
       </div>
     </div>
+
+    <div class="header__content">
+      <div class="container flex">
+
+        <div class="header__image header__image-one">
+          <img src="" alt="">
+        </div>
+
+        <div class="header__info-main">
+          <h2 class="header__title"></h2>
+          <p class="header__info"></p>
+          <div class="header__links">
+            <a href="" class="btn btn-long btn-shadow">Contact Us</a>
+            <a href="#" class="btn btn-light btn-short underline">Watch Video</a>
+          </div>
+        </div>
+
+        <div class="header__image header__image-two">
+          <img src="" alt="">
+        </div>
+
+      </div>
+    </div>
+
   </header>
 
 </body>
