little changes to header__content

--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
           <div class="header__info-main mr-auto ml-auto">
             <h2 class="header__title m-0">We Develop <span class="header__title-2 m-0">Shopify</span>  sites</h2>
             <p class="header__info m-0">Slingback fabric heels. Thin wraparound ankle strap. Squared heel and toe. Pointed toes. Padded insole with geometrical design. </p>
-            <div class="header__links">
-              <a href="" class="btn btn-long btn-shadow">Contact Us</a>
-              <a href="#" class="btn btn-light btn-short underline">Watch Video</a>
+            <div class="header__links flex">
+              <a href="" class="btn btn-long btn-shadow ml-auto header__m">Contact Us</a>
+              <a href="#" class="btn btn-light btn-short underline mr-auto header__m">Watch Video</a>
             </div>
           </div>
   
-          <div class="header__image header__image-two">
+          <p class="header__image header__image-two ml-auto mr-auto">
             <img src="img/second-side.jpg" alt="">
-          </div>
+          </p>
   
         </div>
       </div>
