section partner is added

--- a/index.html
+++ b/index.html
@@ -62,6 +62,54 @@
       </div>
   
     </header>
+
+    <section class="partner">
+
+      <ul class="partner__min-nav">
+        <div class="container nav-container flex">
+          <div class="partner__image">
+            <img src="img/logo-1.png" alt="">
+          </div>
+          <div class="partner__image">
+            <img src="img/logo-2.png" alt="">
+          </div>
+          <div class="partner__image">
+            <img src="img/logo-3.png" alt="">
+          </div>
+          <div class="partner__image">
+            <img src="img/logo-4.png" alt="">
+          </div>
+          <div class="partner__image">
+            <img src="img/logo-5.png" alt="">
+          </div>
+        </div>
+      </ul>
+
+      <div class="partner__info">
+        <h5 class="partner__subtitle m-0">What we Do?</h5>
+        <h1 class="partner__title m-0">Our Specialization</h1>
+      </div>
+      
+
+      <ul class="partner__main container">
+
+        <li class="partner__item">
+          <div class="item__logo flex">
+            <span class="item__image"><img src="img/part-1.png" alt=""></span>
+            <h2 class="item__title">Webflow Development</h2>
+          </div>
+          <p class="item__info">Really boy law county she unable her sister. Feet you off its like like six. Among sex are leave law built now. In built table in an rapid blush. Merits behind on afraid or warmly.</p>
+          <a href="" class="btn btn-no btn-underline">Read More</a>
+        </li>
+
+
+
+      </ul>
+
+      <button class="btn btn-extra-long btn-shadow flex ml-auto mr-auto">Learn More</button>
+
+
+    </section>
   </div>
 
   
