pre-last-changes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
   
       <div class="header__content">
-        <div class="flex">
+        <div class="flex unus">
   
           <div class="header__image header__image-one">
             <img src="img/first-side.jpg" alt="">
@@ -66,7 +66,7 @@
     <section class="partner">
 
       <ul class="partner__min-nav">
-        <div class="container nav-container flex">
+        <div class="container nav-container flex partner__nav">
           <div class="partner__image">
             <img src="img/logo-1.png" alt="">
           </div>
@@ -86,23 +86,48 @@
       </ul>
 
       <div class="partner__info">
-        <h5 class="partner__subtitle m-0">What we Do?</h5>
-        <h1 class="partner__title m-0">Our Specialization</h1>
+        <h5 class="partner__subtitle mar-null">What we Do?</h5>
+        <h1 class="partner__title mar-null">Our Specialization</h1>
       </div>
       
 
       <ul class="partner__main container">
 
-        <li class="partner__item">
+        <li class="partner__item item-one">
           <div class="item__logo flex">
             <span class="item__image"><img src="img/part-1.png" alt=""></span>
             <h2 class="item__title">Webflow Development</h2>
           </div>
           <p class="item__info">Really boy law county she unable her sister. Feet you off its like like six. Among sex are leave law built now. In built table in an rapid blush. Merits behind on afraid or warmly.</p>
-          <a href="" class="btn btn-no btn-underline">Read More</a>
+          <a href="" class="btn btn-no underline btn-light item-link">Read More</a>
         </li>
 
+        <li class="partner__item item-two">
+          <div class="item__logo flex">
+            <span class="item__image"><img src="img/part-2.png" alt=""></span>
+            <h2 class="item__title">Shopify Development</h2>
+          </div>
+          <p class="item__info">Really boy law county she unable her sister. Feet you off its like like six. Among sex are leave law built now. In built table in an rapid blush. Merits behind on afraid or warmly.</p>
+          <a href="" class="btn btn-no underline btn-light item-link">Read More</a>
+        </li>
 
+        <li class="partner__item item-thr">
+          <div class="item__logo flex">
+            <span class="item__image"><img src="img/part-3.png" alt=""></span>
+            <h2 class="item__title">Figma Web Designing</h2>
+          </div>
+          <p class="item__info">Really boy law county she unable her sister. Feet you off its like like six. Among sex are leave law built now. In built table in an rapid blush. Merits behind on afraid or warmly.</p>
+          <a href="" class="btn btn-no underline btn-light item-link">Read More</a>
+        </li>
+
+        <li class="partner__item item-fou">
+          <div class="item__logo flex">
+            <span class="item__image"><img src="img/part-4.png" alt=""></span>
+            <h2 class="item__title">Php Development</h2>
+          </div>
+          <p class="item__info">Really boy law county she unable her sister. Feet you off its like like six. Among sex are leave law built now. In built table in an rapid blush. Merits behind on afraid or warmly.</p>
+          <a href="" class="btn btn-no underline btn-light item-link">Read More</a>
+        </li>
 
       </ul>
 
